fix: hamburger menu functionality and mobile navigation cutoff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,6 +458,10 @@ button:hover, .button:hover {
         height: 45px;
     }
 
+    nav#main-nav {
+        position: static;
+    }
+
     nav#main-nav ul {
         display: flex;
         flex-direction: column;
